[package]
name = "rust"
version = "0.1.0"
authors = ["Evgeny Fomin <fominok@hotmail.com>"]
edition = "2018"

[dependencies]
rustyline = "6.3.0"
regex = "1.3.9"
lazy_static = "1.4.0"
thiserror = "1.0"

[[bin]]
name = "step0_repl"
path = "step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "step1_read_print.rs"

[[bin]]
name = "step2_eval"
path = "step2_eval.rs"

[[bin]]
name = "step3_env"
path = "step3_env.rs"